# sabiql

./: .coderabbit.yaml  .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  flake.nix  install.sh  lefthook.yml  mise.toml  rust-toolchain.toml
crates/app/: Cargo.toml
crates/infra/: Cargo.toml
crates/ui/: Cargo.toml
src/app/: Cargo.toml  action.rs  adhoc_risk.rs  browse_session.rs  catalog.rs  cell_edit_state.rs  command.rs  completion.rs  confirm_dialog_state.rs  connection_cache.rs  connection_error.rs  connection_error_state.rs  connection_list.rs  connection_setup_state.rs  connection_state.rs  ddl.rs  effect.rs  effect_runner.rs  er_state.rs  explain_context.rs  focused_pane.rs  graph_builder.rs  input_mode.rs  inspector_tab.rs  keybindings.rs  keymap.rs  lib.rs  message_state.rs  metadata_cache.rs  mod.rs  modal_state.rs  mode.rs  nav_intent.rs  navigation_context.rs  palette.rs  picker_state.rs  query_execution.rs  query_history_state.rs  reducer.rs  render_schedule.rs  (+15 more)
src/app/cache/: lru_cache.rs  mod.rs
src/app/cmd/: cli_sqlite.rs  completion_engine.rs  connection.rs  effect.rs  mod.rs  query_task.rs  render_schedule.rs  runner.rs  settings.rs  sqlite_diagnostics.rs  sqlite_path.rs  sqlite_path_validate.rs  sqlite_startup.rs  test_fixtures.rs  test_support.rs  utility.rs
src/app/cmd/browse/: metadata.rs  mod.rs  query.rs
src/app/cmd/cache/: lru_cache.rs  ttl_cache.rs
src/app/cmd/er/: handler.rs  mod.rs  task.rs
src/app/cmd/sql_editor/: completion.rs  mod.rs  query_history.rs
src/app/effect_handlers/: completion.rs  connection.rs  er.rs  metadata.rs  mod.rs  query.rs  query_history.rs  test_support.rs  utility.rs
src/app/input/: jsonb.rs  mod.rs  normal.rs  pickers.rs  sql_modal.rs
src/app/keybindings/: connections.rs  editors.rs  mod.rs  normal.rs  overlays.rs
src/app/model/: app_state.rs  er_state.rs  explain_context.rs  mod.rs  runtime_state.rs
src/app/model/browse/: cell_detail.rs  cell_edit.rs  inspector_view_model.rs  json_tree.rs  jsonb_detail.rs  mod.rs  query_execution.rs  result_history.rs  result_interaction.rs  row_detail.rs  row_json.rs  session.rs
src/app/model/connection/: cache.rs  error.rs  error_state.rs  list.rs  mod.rs  origin.rs  setup.rs  state.rs
src/app/model/shared/: async_run.rs  confirm_dialog.rs  cursor.rs  db_capabilities.rs  detail_view.rs  engine_feature_profile.rs  flash_timer.rs  focused_pane.rs  help.rs  input_mode.rs  inspector_tab.rs  inspector_view_model.rs  key_sequence.rs  low_scroll.rs  message.rs  mod.rs  modal.rs  multi_line_input.rs  picker.rs  render_output.rs  settings.rs  text_input.rs  theme_id.rs  ui_state.rs  viewport.rs  wrapped_cell.rs
src/app/model/sql_editor/: completion.rs  mod.rs  modal.rs  query_history.rs
src/app/model/sqlite/: diagnostics.rs
src/app/policy/: feature_policy.rs  mod.rs  password_masking.rs  sqlite_path.rs  table_kind.rs
src/app/policy/json/: json_diff.rs  mod.rs
src/app/policy/preview_cell_text/: diff.rs  display.rs  handling.rs  mod.rs
src/app/policy/sql/: export.rs  lexer.rs  mod.rs  result_query.rs  sqlite_explain.rs  sqlite_export.rs  sqlite_lexer.rs  sqlite_statement_splitter.rs  sqlite_transaction.rs  statement_classifier.rs
src/app/policy/write/: inline_cell_edit.rs  mod.rs  sql_risk.rs  write_guardrails.rs  write_update.rs
src/app/ports/: clipboard.rs  config_writer.rs  connection_store.rs  db_capabilities.rs  db_operation_error.rs  ddl_generator.rs  dialect.rs  er_exporter.rs  folder_opener.rs  graphviz.rs  inbound.rs  metadata.rs  mod.rs  password_masking.rs  query_executor.rs  query_history.rs  renderer.rs  service_file.rs  sql_dialect.rs  tui_session.rs
src/app/ports/inbound/: mod.rs
src/app/ports/outbound/: access_mode.rs  cached_result_exporter.rs  clipboard.rs  config_writer.rs  connection_store.rs  db_capabilities.rs  db_operation_error.rs  ddl_generator.rs  mod.rs  (+11 more)
src/app/present/: mod.rs  table_storage.rs
src/app/reducers/: connection.rs  er.rs  explain.rs  helpers.rs  metadata.rs  mod.rs  modal.rs  navigation.rs  query.rs  sql_modal.rs
src/app/tasks/: er_diagram.rs
src/app/test_support/: column.rs  connection.rs  mod.rs  table.rs
src/app/update/: action.rs  dispatch_result.rs  er.rs  explain.rs  helpers.rs  mod.rs  modal.rs  query_context.rs  reducer.rs  sql_editor.rs  test_fixtures.rs  test_support.rs
src/domain/: Cargo.toml  column.rs  command_tag.rs  er.rs  explain_plan.rs  foreign_key.rs  graph.rs  index.rs  lib.rs  metadata.rs  mod.rs  query_history.rs  query_result.rs  rls.rs  sqlite_diagnostics.rs  table.rs  table_kind.rs  table_storage.rs  trigger.rs  write_result.rs
src/domain/connection/: config.rs  database_type.rs  id.rs  mod.rs  name.rs  profile.rs  service_entry.rs  sqlite_path.rs  sqlite_startup.rs  ssl_mode.rs
src/infra/: Cargo.toml  lib.rs  mod.rs  utils.rs
src/infra/adapters/: app_config_file.rs  cached_result_exporter.rs  clipboard.rs  config_writer.rs  connection_store.rs  csv_export.rs  er_log_writer.rs  folder_opener.rs  mod.rs  mysql.rs  pg_service.rs  postgres.rs  query_history.rs  registry.rs  settings_store.rs  test_support.rs
src/infra/clipboard/: mod.rs  pbcopy.rs
src/infra/config/: cache.rs  connection_config.rs  mod.rs  pgclirc.rs  project_root.rs  settings_config.rs
src/infra/export/: dot.rs  graphviz.rs  mod.rs
src/test-support/: Cargo.toml  column.rs  lib.rs  table.rs
src/test-support/infra/: mod.rs
src/ui/: Cargo.toml  lib.rs  mod.rs  settings_hints.rs  theme.rs  tui.rs
src/ui/adapters/: mod.rs  tui_adapter.rs
src/ui/components/: command_palette.rs  confirm_dialog.rs  connection_error.rs  connection_selector.rs  connection_setup.rs  er_details.rs  er_graph.rs  er_table_picker.rs  explorer.rs  footer.rs  header.rs  help_overlay.rs  inspector.rs  layout.rs  mod.rs  overlay.rs  result.rs  scroll_indicator.rs  sql_modal.rs  table_picker.rs  viewport_columns.rs
src/ui/event/: handler.rs  key_translator.rs  mod.rs
src/ui/features/: mod.rs
src/ui/primitives/: mod.rs
src/ui/shell/: command_line.rs  footer.rs  header.rs  layout.rs  mod.rs
(+671 files in other folders)
