[package]
name = "sabiql-app"
version = "0.1.0"
edition = "2024"

[lib]
path = "../../src/app/mod.rs"

[features]
test-support = []

[dependencies]
arboard.workspace = true
async-trait.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
csv.workspace = true
lru.workspace = true
nucleo-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
unicode-casefold.workspace = true
unicode-width.workspace = true
urlencoding.workspace = true
uuid.workspace = true
dirs.workspace = true
sabiql-domain = { path = "../domain" }

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
