[package]
name = "sabiql-infra"
version = "0.1.0"
edition = "2024"

[lib]
path = "../../src/infra/mod.rs"

[dependencies]
arboard.workspace = true
async-trait.workspace = true
csv.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
urlencoding.workspace = true
sabiql-app = { path = "../app" }
sabiql-domain = { path = "../domain" }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
