[package]
name = "sabiql-domain"
version = "1.11.1"
edition = "2024"
description = "Domain layer for sabiql"
license = "MIT"
repository = "https://github.com/riii111/sabiql"

[lib]
path = "lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
