[package]
name = "domain"
version.workspace = true
edition.workspace = true
description = "Domain layer for sabiql"
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
