[package]
name = "sabiql-infra"
version = "1.11.1"
edition = "2024"
description = "Infrastructure layer for sabiql"
license = "MIT"
repository = "https://github.com/riii111/sabiql"

[lib]
path = "lib.rs"

[dependencies]
arboard.workspace = true
async-trait.workspace = true
csv.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
urlencoding.workspace = true
sabiql-app = { path = "../app", version = "1.11.1" }
sabiql-domain = { path = "../domain", version = "1.11.1" }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
