[package]
name = "sabiql-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Infrastructure layer for sabiql"
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-trait.workspace = true
csv.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
urlencoding.workspace = true
sabiql-app.workspace = true
sabiql-domain.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
