[package]
name = "sabiql-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Test support utilities for sabiql"
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
sabiql-domain.workspace = true
tempfile.workspace = true

[lints]
workspace = true
