[package]
name = "sabiql-ui"
version = "1.11.1"
edition = "2024"
description = "UI layer for sabiql"
license = "MIT"
repository = "https://github.com/riii111/sabiql"

[lib]
path = "lib.rs"

[features]
test-support = ["sabiql-app/test-support"]

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-width.workspace = true
sabiql-app = { path = "../app", version = "1.11.1" }
sabiql-domain = { path = "../domain", version = "1.11.1" }

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
sabiql-app = { path = "../app", version = "1.11.1", features = ["test-support"] }
