[package]
name = "ui"
version.workspace = true
edition.workspace = true
description = "UI layer for sabiql"
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[features]
test-support = ["app/test-support"]

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-width.workspace = true
app.workspace = true
domain.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
app = { workspace = true, features = ["test-support"] }
